@@ -152,6 +152,7 @@ namespace libtorrent
 
 	void entry::operator=(const entry& e)
 	{
+		if (&e == this) return;
 		destruct();
 		copy(e);
 	}
@@ -248,6 +249,29 @@ namespace libtorrent
 		return *reinterpret_cast<const dictionary_type*>(data);
 	}
 
+	entry::preformatted_type& entry::preformatted()
+	{
+		if (m_type == undefined_t) construct(preformatted_t);
+#ifndef BOOST_NO_EXCEPTIONS
+		if (m_type != preformatted_t) throw_type_error();
+#elif defined TORRENT_DEBUG
+		TORRENT_ASSERT(m_type_queried);
+#endif
+		TORRENT_ASSERT(m_type == preformatted_t);
+		return *reinterpret_cast<preformatted_type*>(data);
+	}
+
+	entry::preformatted_type const& entry::preformatted() const
+	{
+#ifndef BOOST_NO_EXCEPTIONS
+		if (m_type != preformatted_t) throw_type_error();
+#elif defined TORRENT_DEBUG
+		TORRENT_ASSERT(m_type_queried);
+#endif
+		TORRENT_ASSERT(m_type == preformatted_t);
+		return *reinterpret_cast<const preformatted_type*>(data);
+	}
+
 	entry::entry()
 		: m_type(undefined_t)
 	{
@@ -314,6 +338,16 @@ namespace libtorrent
 		m_type = int_t;
 	}
 
+	entry::entry(preformatted_type const& v)
+		: m_type(undefined_t)
+	{
+#ifdef TORRENT_DEBUG
+		m_type_queried = true;
+#endif
+		new(data) preformatted_type(v);
+		m_type = preformatted_t;
+	}
+
 	// convert a lazy_entry into an old skool entry
 	void entry::operator=(lazy_entry const& e)
 	{
@@ -349,6 +383,16 @@ namespace libtorrent
 				destruct();
 				break;
 		}
+	}
+
+	void entry::operator=(preformatted_type const& v)
+	{
+		destruct();
+		new(data) preformatted_type(v);
+		m_type = preformatted_t;
+#ifdef TORRENT_DEBUG
+		m_type_queried = true;
+#endif
 	}
 
 	void entry::operator=(dictionary_type const& v)
@@ -405,6 +449,8 @@ namespace libtorrent
 			return list() == e.list();
 		case dictionary_t:
 			return dict() == e.dict();
+		case preformatted_t:
+			return preformatted() == e.preformatted();
 		default:
 			TORRENT_ASSERT(m_type == undefined_t);
 			return true;
@@ -426,6 +472,9 @@ namespace libtorrent
 			break;
 		case dictionary_t:
 			new (data) dictionary_type;
+			break;
+		case preformatted_t:
+			new (data) preformatted_type;
 			break;
 		default:
 			TORRENT_ASSERT(t == undefined_t);
@@ -452,6 +501,9 @@ namespace libtorrent
 		case dictionary_t:
 			new (data) dictionary_type(e.dict());
 			break;
+		case preformatted_t:
+			new (data) preformatted_type(e.preformatted());
+			break;
 		default:
 			TORRENT_ASSERT(e.type() == undefined_t);
 		}
@@ -476,6 +528,9 @@ namespace libtorrent
 			break;
 		case dictionary_t:
 			call_destructor(reinterpret_cast<dictionary_type*>(data));
+			break;
+		case preformatted_t:
+			call_destructor(reinterpret_cast<preformatted_type*>(data));
 			break;
 		default:
 			TORRENT_ASSERT(m_type == undefined_t);
@@ -526,6 +581,10 @@ namespace libtorrent
 			case dictionary_t:
 				std::swap(*reinterpret_cast<dictionary_type*>(data)
 					, *reinterpret_cast<dictionary_type*>(e.data));
+				break;
+			case preformatted_t:
+				std::swap(*reinterpret_cast<preformatted_type*>(data)
+					, *reinterpret_cast<preformatted_type*>(e.data));
 				break;
 			default:
 				break;
@@ -619,6 +678,9 @@ namespace libtorrent
 					i->second.to_string_impl(out, indent+2);
 				}
 			} break;
+		case preformatted_t:
+			out += "<preformatted>\n";
+			break;
 		default:
 			out += "<uninitialized>\n";
 		}
