@@ -1,3 +1,4 @@
+	* added a new "preformatted" type to bencode entry variant type
 	* fix division by zero in super-seeding logic
 
 1.0.9 release
